# app-generar-audio-portal-diario-ejes

./: .gitignore  README.md  clean-and-deploy.sh  deploy.sh  docker-compose.yml  error.html  package-lock.json  red-docker.json  requirements.txt  resaltado-to-new-file.py  text-to-speech-test.py  texto-ssml.xml  texto_resaltado.docx  vision_general_proyecto.md
api/: .env  .gitignore  Dockerfile  connect-gc-api.py  docker-compose.yml  gcloud_SA_access.py  main.py  requirements.txt
api-proxy/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  estructura_api-proxy.md  gcloud_SA_access.py  main.py  requirements.txt  utils.py
api-proxy/gcloud_CLI/: gcloud_CLI_access.py
api-proxy/gcloud_tss/: __init__.py  client.py
api-proxy/gcloud_tts/: LICENSE  __init__.py  client.py  exceptions.py  pyproject.toml  setup.py
api-proxy/gcloud_tts/auth/: authenticator.py  credentials.py
api-proxy/gcloud_tts/gcloud_tts.egg-info/: top_level.txt
api-proxy/gcloud_tts/tts/: __init__.py
api-proxy/test/: requirements.txt  test_access.py
api-proxy/tests/: main_test_gcloud_access.py
api-proxy/utils/: process_files.py
api/test/: test_access.py
api_proxy/: .dockerignore  .gitignore  Dockerfile  README.md  estructura_api-proxy.md  old.run.py  pyproject.toml  test_credentials.sh
api_proxy/api_proxy/: __init__.py  __main__.py  config.py  routes.py
api_proxy/api_proxy/gcloud_tts/: README.md  __init__.py  client.py  test_pyproject.toml
api_proxy/api_proxy/gcloud_tts/auth/: __init__.py  authenticator.py  credentials.py
api_proxy/api_proxy/gcloud_tts/gcloud_tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api_proxy/api_proxy/gcloud_tts/tts/: synthesizer.py
api_proxy/api_proxy/src/: main-old.py
api_proxy/api_proxy/utils/: process_files.py  validate.py
api_proxy/tests/: conftest.py
api_proxy/tests/integrations/: test_api_endpoint.py
api_proxy/tests/unit/: test_client.py
back/: .env  Dockerfile  README.md  main.py  requirements.txt
back/diario_pintado/: 250909RT SPK.docx  250910RT-SPK.docx
backend/: .env  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  utils.py
backend/api/: __init__.py  __main__.py  getFileandSave.py  processDoc.py  routes.py  telegram_services.py
backend/api/tests/integrations/: test_telegram_endpoints.py
backend/api_backend/: __init__.py  __main__.py  routes.py
backend/api_backend/services/: __init__.py  client.py  routes.py
backend/api_backend/tests/: conftest.py  estructura_dependencias.md
backend/api_backend/tests/integrations/: test_telegram_routes.py
backend/api_backend/tests/unit/: test_client.py
backend/api_backend/utils/: process_file.py
backend/data/diario_pintado/: test.docx
backend/shared-data/diario_pintado/: 250917 TS PRL.docx  250917LN.docx  250918 CD, LJ.docx  250918 TS- PRL (2).docx  250918 TS- PRL.docx  250918P12.docx  250919 CL-CR.doc
backend/shared-data/diario_procesado/: procesado_250915CDLJET.docx  procesado_250918 CD, LJ.docx  procesado_test_02.docx  procesado_test_03.docx
backend/shared-data/diario_ssml/: ssml_250918 CD, LJ.xml
backend/utils/: convert-audio.py  convert_audio.py
diario_pintado/: 250911RT-SPK.docx
diario_procesado/: 250910RT-SPK_resaltado.docx  test_resaltado.docx
errors/: conectividad.md  contenedor-exited.md  error_paquete_python.md
frontend/: .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/deploy/: Dockerfile
notes/: refactor_api_proxy.md  refactor_backend.md
scripts/: clean-and-deploy.sh  deploy.sh  fix-docker-network.sh  monitor-service.sh  quick-reset.sh
test/: file.xml  procesado_test_03_corto.docx  procesado_test_03_largo.docx
utils/: chunks.py  descargarAudio.tsx  monitorear-estado-audio.py  signed-url.py
(+33 files in other folders)
