[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcloud-tts"
version = "1.0.0"
description = "Cliente para Text-to-Speech de Google Cloud"
authors = [{name = "Brian Malavenda", email = "brian.l.malavenda@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "google-cloud-texttospeech>=2.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0"
]

[project.urls]
Homepage = "https://github.com/brianmalavenda/gcloud-tts"
